--- a/conf/env/thumper.yml
+++ b/conf/env/thumper.yml
@@ -6,11 +6,12 @@ channels:
 dependencies:
   - python=3.8
   - mamba
-  - pandas>=1.2
-  - snakemake=6.5.0
+  - pandas>=1.3.5
+  - snakemake=6.6.1
   - pytest
   #- sourmash>=4.1
   - pip
   - pip:
-    - git+https://github.com/bluegenes/thumper@refactor-simplify
-    - git+https://github.com/sourmash-bio/sourmash@latest
+    - git+https://github.com/bluegenes/thumper@assess-and-viz
+    #- git+https://github.com/sourmash-bio/sourmash@latest
+    - git+https://github.com/sourmash-bio/sourmash@add-dist-est
